--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,20 @@
+## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
+spring.datasource.url = jdbc:mysql://localhost:3306/ecommerce?useSSL=false
+spring.datasource.tomcat.connection-properties=useUnicode=true;characterEncoding=utf-8mb4;
+spring.datasource.username = root
+spring.datasource.password = special222
+
+## Hibernate Properties
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto =update
+spring.jpa.properties.hibernate.default_schema=ecommerce
+
+
+logging.level.org.hibernate.SQL=DEBUG
+
+logging.level.org.hibernate.type=TRACE
+spring.main.allow-circular-references=true
 
